initial css added and fix design

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 	<title>projects</title>
+	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
-	<a href="./TodoList/index.html">Todo List</a>
+	<div class="container">
+		<h1>Projects</h1>
+		<hr>
+		<a href="./TodoList/index.html">Todo List</a>
+	</div>	
 </body>
 </html>
