Added link to music player repository

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<h1>Projects</h1>
 		<hr>
 		<a href="./TodoList/index.html">Todo List</a>
+		<a href="./music-player/index.html">Music player</a>
+		
 	</div>	
 </body>
 </html>
