The homepage has been sensitized, under the images folder social media svg files uploaded. Social media links added.

--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>projects</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Enes Gündüz</title>
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
 <body>
 	<div class="container">
-		<h1>Projects</h1>
-		<hr>
-		<a href="./TodoList/index.html">Todo List</a>
+		<div class="avatar">
+			<a href="https://enesgunduz.github.io/"><img src="https://cdn.dribbble.com/users/4659075/avatars/small/8ffab71bed4919fe1a84fe4707e597fa.png?1583229079" alt=""></a>
+		</div>
+		<div class="info">
+			<div class="fullname">Enes Gündüz</div>
+			<div class="social-media">
+				<a href="https://github.com/enesgunduz" target="_blank"><img src="./images/Github.svg" alt="twitter"></a>
+				<a href="https://twitter.com/ayrilacagiz" target="_blank"><img src="./images/Twitter.svg" alt="dribbble"></a>
+				<a href="https://dribbble.com/enesgunduz" target="_blank"><img src="./images/Dribbble.svg" alt="dribbble"></a>
+			</div>
+		</div>
+	
+		<div class="projects">
+			<h1>Projects</h1>
+			<hr>
+			<ul>
+				<li><a href="./TodoList/index.html">Todo List</a></li>
+				<li><a href="./music-player/index.html">Music player</a></li>
+			</ul>
+		</div>
 	</div>	
 </body>
-</html>
