Added link to movie-projects repository

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<ul>
 				<li><a href="./TodoList/index.html">Todo List</a></li>
 				<li><a href="./music-player/index.html">Music player</a></li>
+				<li><a href="./film-project/index.html">Film Project</a></li>
 			</ul>
 		</div>
 	</div>	
