--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<li><a href="./TodoList/index.html">Todo List</a></li>
 				<li><a href="./music-player/index.html">Music player</a></li>
 				<li><a href="./film-project/index.html">Film Project</a></li>
-				<li><a href="./random-color/index.html">Random color</a></li>
+				<li><a href="./Random-color/index.html">Random color</a></li>
 			</ul>
 		</div>
 	</div>	
