Link added to Exchange-rates-api repository

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<li><a href="./music-player/index.html">Music player</a></li>
 				<li><a href="./film-project/index.html">Film Project</a></li>
 				<li><a href="./Random-color/index.html">Random color</a></li>
+				<li><a href="./Exchange-rates-api/index.html">Exchange rates calculator</a></li>
 			</ul>
 		</div>
 	</div>	
