dark mode added

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 			<a href="https://enesgunduz.github.io/"><img src="https://cdn.dribbble.com/users/4659075/avatars/small/8ffab71bed4919fe1a84fe4707e597fa.png?1583229079" alt=""></a>
 		</div>
 		<div class="info">
-			<div class="fullname">Enes Gündüz</div>
 			<div class="social-media">
-				<a href="https://github.com/enesgunduz" target="_blank"><img src="./images/Github.svg" alt="twitter"></a>
-				<a href="https://twitter.com/ayrilacagiz" target="_blank"><img src="./images/Twitter.svg" alt="dribbble"></a>
-				<a href="https://dribbble.com/enesgunduz" target="_blank"><img src="./images/Dribbble.svg" alt="dribbble"></a>
+				<a href="https://github.com/enesgunduz" target="_blank">github</a>
+				<a href="https://twitter.com/ayrilacagiz" target="_blank">twitter</a>
+				<a href="https://dribbble.com/enesgunduz" target="_blank">dribbble</a>
 			</div>
 		</div>
 	
