id added to links

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		</div>
 		<div class="info">
 			<div class="social-media">
-				<a href="https://github.com/enesgunduz" target="_blank">github</a>
-				<a href="https://twitter.com/ayrilacagiz" target="_blank">twitter</a>
-				<a href="https://dribbble.com/enesgunduz" target="_blank">dribbble</a>
+				<a href="https://github.com/enesgunduz" id="gh" target="_blank">github</a>
+				<a href="https://twitter.com/ayrilacagiz" id="tw" target="_blank">twitter</a>
+				<a href="https://dribbble.com/enesgunduz" id="db" target="_blank">dribbble</a>
 			</div>
 		</div>
 	
