profile pic add

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="container">
 		<div class="avatar">
-			<a href="https://enesgunduz.github.io/"><img src="https://cdn.dribbble.com/users/4659075/avatars/small/8ffab71bed4919fe1a84fe4707e597fa.png?1583229079" alt=""></a>
+			<a href="https://enesgunduz.github.io/"><img src="./profile-pic.png" alt="profile pic"></a>
 		</div>
 		<div class="info">
 			<div class="social-media">
