--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 			<ul>
 				<li><a href="./TodoList/index.html">Todo List</a></li>
 				<li><a href="./music-player/index.html">Music player</a></li>
-				<li><a href="./film-project/index.html">Film Project</a></li>
 				<li><a href="./Random-color/index.html">Random color</a></li>
 				<li><a href="./Exchange-rates-api/index.html">Exchange rates calculator</a></li>
+				<li><a href="./bosluk-portfolio/index.html">Personal Portfolio Template</a></li>
 			</ul>
 		</div>
 	</div>	
