--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="info">
 			<div class="social-media">
 				<a href="https://github.com/enesgunduz" id="gh" target="_blank">github</a>
-				<a href="https://twitter.com/ayrilacagiz" id="tw" target="_blank">twitter</a>
+				<a href="https://twitter.com/enesqunduz" id="tw" target="_blank">twitter</a>
 				<a href="https://dribbble.com/enesgunduz" id="db" target="_blank">dribbble</a>
 			</div>
 		</div>
@@ -24,10 +24,6 @@
 			<h1>Projects</h1>
 			<hr>
 			<ul>
-				<li><a href="./TodoList/index.html">Todo List</a></li>
-				<li><a href="./music-player/index.html">Music player</a></li>
-				<li><a href="./Random-color/index.html">Random color</a></li>
-				<li><a href="./Exchange-rates-api/index.html">Exchange rates calculator</a></li>
 				<li><a href="./bosluk-portfolio/index.html">Personal Portfolio Template</a></li>
 			</ul>
 		</div>
