--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Enes Gunduz is Computer  Engineering student at Bartin University.Love to code frontend systems.">
+	<meta name="robots" content="index,follow">
+	<meta name="googlebot" content="index,follow">
+
+
 	<title>Enes Gündüz</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="./main.css">
@@ -27,7 +32,10 @@
 				<a href="https://dribbble.com/enesgunduz" id="db" target="_blank">dribbble</a>
 			</div>
 		</div>
-	
+		<div class="about">
+		<h1>hey, I'm leerob 👋</h1>
+		<p>I'm a frontend developer, optimist, and community builder. I currently work as the VP of Developer Experience at Vercel, where I lead the community for Next.js logomarkNext.js, an open-source web framework built with React logomarkReact.</p>
+		</div>
 		<div class="projects">
 			<h1>Projects</h1>
 			<hr>
