--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 			</div>
 		</div>
 		<div class="about">
-		<h1>hey, I'm leerob 👋</h1>
-		<p>I'm a frontend developer, optimist, and community builder. I currently work as the VP of Developer Experience at Vercel, where I lead the community for Next.js logomarkNext.js, an open-source web framework built with React logomarkReact.</p>
+		<h1>Hey, I'm Enes 👋</h1>
+		<p>I'm a <b>Computer Engineering </b>Student at Bartın University, optimist, and community builder. I currently develop my frontend skills. I get class <b> data structures</b>	 and <b>computer networks</b>.</p>
 		</div>
 		<div class="projects">
 			<h1>Projects</h1>
