--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 	<meta name="description" content="Enes Gunduz is Computer  Engineering student at Bartin University.Love to code frontend systems.">
 	<meta name="robots" content="index,follow">
 	<meta name="googlebot" content="index,follow">
-
-
 	<title>Enes Gündüz</title>
+  <link rel="icon" type="image/x-icon" href="/profile-pic.png">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
 	<link rel="stylesheet" type="text/css" href="./main.css">
 </head>
