--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 		<div class="about">
 		<h1>Hey, I'm Enes 👋</h1>
-		<p>I'm a <b>Computer Engineering </b>Student at Bartın University, optimist, and community builder. I currently develop my frontend skills. I get class <b> data structures</b>	 and <b>computer networks</b>.</p>
+		<p>I'm a <b>Computer Engineering </b>Student at Bartın University, optimist, and community builder. I currently develop my frontend skills. I take class <b> data structures</b>	 and <b>computer networks</b>.</p>
 		</div>
 		<div class="projects">
 			<h1>Projects</h1>
